--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ dist
 dist-ssr
 *.local
 
+# Environment variables (optional - có thể commit nếu key free)
+# .env
+# .env.local
+# .env.production
+# .env.development
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
