sua gesture handlers de khong conflict voi map va hourly scroll

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -4,7 +4,11 @@
   "webDir": "dist",
   "server": {
     "androidScheme": "https",
-    "iosScheme": "https"
+    "iosScheme": "https",
+    "cleartext": true
+  },
+  "android": {
+    "allowMixedContent": true
   },
   "plugins": {
     "SplashScreen": {
